fixed header spacing

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,9 @@ body {
   width: 26.1%;
   height: auto;
   text-shadow: 0 0 10px rgba(249, 246, 246, 0.8), 0 0 20px rgba(183, 37, 37, 0.8), 0 0 30px rgba(247, 245, 245, 0.8);
+  @media (max-width: 768px) {
+    width: 40%;
+  }
 }
 
 .king-image {
@@ -38,11 +41,11 @@ body {
 
 .App-header {
   text-align: center;
-  position: fixed;
-  top: 0;
+  position: absolute;
   width: 100%;
   background: none;
-  padding: 20px;
+  top: 0;
+  padding: 5px;
   color: #fff;
   z-index: 1000;
   font-size: 2vw;
